backup/basedir-acm-secondary copy/namespaces/audit/ola-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ola-web
spec:
  selector:
    matchLabels:
      app: ola-web
  replicas: 1
  template:
    metadata:
      labels:
        app: ola-web
        service.istio.io/canonical-name: ola-web
    spec:
      containers:
      - name: ola-web
        image: im3iodev/ola-web-poc:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 15
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: Awesome  
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: Awesome         
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: ola-web
spec:
  type: ClusterIP
  selector:
    app: ola-web
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ola-web-external
spec:
  type: LoadBalancer
  selector:
    app: ola-web
  ports:
  - name: http
    port: 80
    targetPort: 80
