backup/basedir-acm-secondary copy/namespaces/audit/istio-manifests.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ola-web-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ola-web-ingress
spec:
  hosts:
  - "*"
  gateways:
  - ola-web-gateway
  http:
  - route:
    - destination:
        host: ola-web-service
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
spec:
  hosts:
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
spec:
  hosts:
  - metadata.google.internal
  addresses:
  - 169.254.169.254 # GCE metadata server
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ola-web-service
spec:
  hosts:
  - "ola-web-service.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: ola-web-service
        port:
          number: 80
